Feat: Display user roles and restrict admin role editing
This commit introduces the display of user roles in the users index and show views, and restricts the editing of the admin role to prevent unauthorized privilege escalation.

Key changes include:

- Added a "Role" column to the users index and show views to display the user's role.
- Added a helper method `role_options_for_select` to the `User` model to generate options for the role select field, excluding the admin role.
- Updated the user form to only display the role select field if the current user is not an admin.
- Added logic to the `update` action in the `UsersController` to prevent non-admins from assigning the admin role.
- Added user ID to user table.

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -6,4 +6,7 @@
   = form.text_field :first_name 
   = form.label :last_name
   = form.text_field :last_name 
+  - if !user.admin?
+    = form.label :role
+    = form.select :role, User.role_options_for_select, { prompt: "Select role" }
   = form.submit
