--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -6,10 +6,13 @@ main.wide
   table(role="grid")
     thead
       tr
+        th ID
         th Email
         th First Name
         th Last Name
+        th Role
         th Created
+        th Updated
         th Actions
     tbody
       = render @users
